se añade el styles

--- a/develop.html
+++ b/develop.html
@@ -6,6 +6,8 @@
     <title>PAGINA DE DEVELOP</title>
 </head>
 <body>
-    
+    <p>Esta es la página de desarrollo.</p>
+    <p>Esta es la página de desarrollo.</p>
+    <p>Esta es la página de desarrollo.</p>
 </body>
 </html>
